@@ -54,7 +54,7 @@
 
     <properties>
         <!-- Maven CI Friendly Versions https://maven.apache.org/maven-ci-friendly.html -->
-        <revision>0.3.7</revision>
+        <revision>0.3.8</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -70,13 +70,16 @@
         <commons-lang3.version>3.7</commons-lang3.version>
         <version.junit-jupiter>5.8.2</version.junit-jupiter>
         <mockito-junit-jupiter.version>4.7.0</mockito-junit-jupiter.version>
+        <jackson.version>2.13.1</jackson.version>
+        <gson.version>2.10.1</gson.version>
         <sonar.exclusions>
             **/test/**,
             **/*Test.java,
             **/target/**,
             **/model/**,
             **/thirdparty/**,
-            **/*Instrumentation.java
+            **/*Instrumentation.java,
+            **/JJWTGenerator.java
         </sonar.exclusions>
         <sonar.test.exclusions>
             **/test/**,
@@ -207,7 +210,28 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>default</id>
+            <properties>
+                <jarName>${project.artifactId}</jarName>
+                <bootStrapJarName>arex-agent-bootstrap.${project.packaging}</bootStrapJarName>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>jar-with-version</id>
+            <properties>
+                <jarName>${project.artifactId}-${project.version}</jarName>
+                <bootStrapJarName>arex-agent-bootstrap-${project.version}.${project.packaging}</bootStrapJarName>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
+        <finalName>${jarName}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -222,7 +246,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.1.2</version>
+                <configuration>
+                    <argLine>
+                        @{argLine}
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.math=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.net=ALL-UNNAMED
+                        --add-opens java.base/java.time=ALL-UNNAMED
+                        --add-opens java.xml/com.sun.org.apache.xerces.internal.jaxp.datatype=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
